--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
 	<li>Compelete a trimester oversea through exchange or intership</li>
 	<li>Have a good balance of university, work, sporting, and social life.</li>
 
+<center>		
+<img src="yassin2.jpg" height="300px"></center>
 </ul>
 
 
