--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 	<li>Have a good balance of university, work, sporting, and social life.</li>
 
 <center>		
-<img src="yassin2.jpg" height="300px"></center>
+<img src="yassin.jpg" height="300px"></center>
 </ul>
 
 
