--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,9 @@
 	<li>Compelete a trimester oversea through exchange or intership</li>
 	<li>Have a good balance of university, work, sporting, and social life.</li>
 
-<center>		
-<img src="yassin.jpg" height="300px"></center>
+		
+<img src="yassin.jpg" height="300px">
+<img src="yassin2.jpg" height="300px">	
 </ul>
 
 
