--- a/experience.html
+++ b/experience.html
@@ -4,17 +4,17 @@
 		<title>EXPERIENCE</title>
 	</head>
 	<body>
-	<P> I  want to tell about my experience my work</p>
+	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p>
 
 <ul>
 	<li>Gain work/get experience in the field of football</li>
 	<li>Experience working as poultry</li>
 	<li>Have a experience in working at kfc.</li>
 	<li>Have a experience go my father country.</li>
+	<li>Have a experience with new foreign language.</li>
+	<li>Have join as volunteer in Zoo Negara during diploma assignment.</li>
 
 </ul>
 
-
-<Body BGCOLOR=RED>
 	</body>
 	</html>
