--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,21 @@
 <html>
 	<head>
 		<center>
-		<tittle><font size="10">contact</tittle></center></font>
+		<tittle><contact></tittle></center></font>
 	</head>
 	<body>
-	<center><font size="8"
-	<P>My contact below if you have anything to ask please do not hesitate to </p>
-		<a href="mailto:yassinizham98@gmail.com"> email </a> me.</center></font>
+	<center>
+	<P>My contact below if you have anything to ask please do not hesitate to contact me.</p>
+		<a href="mailto:yassinizham98@gmail.com"> email </a> </center>
 
 	<p>
 		<center>
 	 	<button>
-	 			<a href="http://www.instagram.com/yassin_izham/">Yassin Izham</a></button></center></p>
-
+	 		<a href="http://www.instagram.com/yassin_izham/">Yassin Izham</a></button></center></p>
+	<p>
+		<center>
+		<button>
+			<a href="mailto:yassinizham98@gmail.com"> email </a> </center></p>
 
 
 <Body BGCOLOR= red>
