--- a/my biodata.html
+++ b/my biodata.html
@@ -5,9 +5,9 @@
 </head>	
 <body>
 <h1>My Personal Biography</h1>
-<p><font face="lucida">This is about my personal biography.</p></font>
+	<p>This is about my personal biography.</p>
 
-<h1 style="font-size: 20px;">About me</h1>
+<h1>About me</h1>
 <img src="yassin.jpeg" height="200px">
 <br><p><button><a href="http://www.instagram.com/yassin_izham/">Muhammad Yassin Izham's Instagram</a></button></p>
 <p>My name is Muhammad Yassin Izham Bin Md Jahangir Alam and I am Bachelor student of Office Management System at University Technology Mara Campus Machang. I was born in Kuala Lumpur in Hospital Damai Services.I'm the eldest of two in my family. I spent most of my childhood in Kepong, Kuala Lumpur. My father is a poultry like poultry chicken in Kelantan. My mother was a housewife.</p>
@@ -20,5 +20,5 @@
 	<li>Good in Academy</li>
 </ul>
 </body>
-<h1 style="color: Red;">Thank You</h1>
+<h1>Thank You</h1>
 </html>
