--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <ul>
 	<li>Gain work/get experience in the field of football</li>
 	<li>My highest a cumulative CGPA of 3.05 or higher in this academic year</li>
-	<li>Compelete a trimester oversea through exchange or intership</li>
+	<li>Compelete a futsal team in karisma UITM</li>
 	<li>Have a good balance of university, work, sporting, and social life.</li>
 
 		
@@ -21,6 +21,5 @@
 
 
 
-<Body BGCOLOR=RED>
 	</body>
 	</html>
