--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Personal Portfolio</title>
 	</head>
+	<link rel="stylesheet" type="text/css" href="external.css">
 <body>
 
 <center><h1>Personal Portfolio</h1>
