--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<title>Homepage</title
+		<title>Homepage</title>
+		<link rel="stylesheet" href="external.css">
 	</head>
 <body>
 	<center><h1><b>Hello</h1></center></font></b>
