--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <body>
 
 <center><h1>Personal Portfolio</h1>
-<a href="homepage.html" target="_homepage">homepage</a>
+<a href="homepage.html" target="_homepage">Homepage</a>
 <p>
-<a href="my biodata.html" target="_biodata"><img src="button.png"></a>
+<a href="my biodata.html" target="_biodata">Biodata</a>
 <p>
 <a href="portfolio.html" target="_portfolio">Portfolio</a>
 <p>
-<a href="experience.html" target="_experience"><img src="experience.png"></a>
+<a href="experience.html" target="_experience">Experience</a>
 <p>
 <a href="contact.html" target="_contact me">Contact me</a>
 
