--- a/my biodata.html
+++ b/my biodata.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Biodata</title>
+	<link rel="stylesheet" href="external.css">
 </head>	
 <body>
 <h1>My Personal Biography</h1>
