--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<tittle>PORTFOLIO</title>
+		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
 	<p>About of my personal interest i need to keeping up-to-date and to learning other languages-currently studying Mandarin. After that i volunteering for organisations that will allow me to help individuals and communities. lastly i need to maintaining personal health through physical and reacreational activity.</p>
