--- a/experience.html
+++ b/experience.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>EXPERIENCE</title>
+		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
 	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p>
