--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<center>
-		<tittle><contact></tittle></center></font>
+		<tittle><contact></tittle></center>
+		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
 	<center>
