--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,7 @@
 	<body>
 	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p>
 
+<center>
 <ul>
 	<li>Gain work/get experience in the field of football</li>
 	<li>Experience working as poultry</li>
@@ -16,6 +17,6 @@
 	<li>Have join as volunteer in Zoo Negara during diploma assignment.</li>
 
 </ul>
-
+</center>
 	</body>
 	</html>
