--- a/homepage.html
+++ b/homepage.html
@@ -4,10 +4,9 @@
 		<link rel="stylesheet" href="external.css">
 	</head>
 <body>
-	<center><h1><b>Hello</h1></center></font></b>
+	<center><h1><b>Hello</h1></center></b>
 
-	<p><center>
-		<h2>About me Muhammad Yassin Izham</p></h2></center>
+	<p><center>About me Muhammad Yassin Izham</p></center>
 		
 	<p><center>
 		<h2>My name is Muhammad Yassin Izham Bin Md Jahangir Alam and i am fresh graduated in Diploma Office Management and Technology at Universiti Teknologi MARA Cawangan Kelantan Kampus Machang. In this website, you will find my biodata, my portfolio, my experiences and also my contact information.</p></h2></center>
