--- a/my biodata.html
+++ b/my biodata.html
@@ -5,8 +5,10 @@
 	<link rel="stylesheet" href="external.css">
 </head>	
 <body>
-<h1>My Personal Biography</h1>
-	<p>This is about my personal biography.</p>
+<center>	
+	<h1>My Personal Biography</h1></center>
+<center>
+	<p>This is about my personal biography.</p></center>
 
 <h1>About me</h1>
 <img src="yassin.jpeg" height="200px">
