--- a/my biodata.html
+++ b/my biodata.html
@@ -17,14 +17,14 @@
 <p>Anyways let’s start from the beginning, I started my educational career in 2004 at Tanah Merah primary school was it fun it had everything a kid could ever imagine. It was unbelievable we were given milk and cookies and we got to sing as well as the fundamental steps of life, the alphabet and numbers. My very first secondary school in 2010 was Sekolah Menengah Kebangsaan Dato'Ahmad Maher.I believe I adopted both my parents’ brilliant brains, because I was always the best students academically. However, my abilities were not limited to the classroom alone. I also excelled in sports. In high school, I was arguably the best male sportsperson in outdoor games, especially in athletics and football.My favourite player football is Eden Hazard and you can see biodata of Eden Hazard too at.<a href="http://www.google.com">Go to Google</a></center>
 	
 <center>	
-<h1>My features</h1>
+	<h1>My features</h1></center>
 <ul>
 	<li>Good in Sport</li>
 	<li>Teamwork</li>
 	<li>Good in Academy</li>
 </ul>
 
-	
+<center>
 	<h1>Thank You</h1></center>
 </body>	
 </html>
