--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,12 @@
 <!portfolio html>
 <html>
-	<head>
+	<head><center>
 		<tittle>PORTFOLIO</title>
 		<link rel="stylesheet" href="external.css">
-	</head>
-	<body>
-	<p>About of my personal interest i need to keeping up-to-date and to learning other languages-currently studying Mandarin. After that i volunteering for organisations that will allow me to help individuals and communities. lastly i need to maintaining personal health through physical and reacreational activity.</p>
+	</head></center>
+	
+	<body><center>
+	<p>About of my personal interest i need to keeping up-to-date and to learning other languages-currently studying Mandarin. After that i volunteering for organisations that will allow me to help individuals and communities. lastly i need to maintaining personal health through physical and reacreational activity.</p></center>
 
 <h2>My achievement</h2>
 <ul>
@@ -14,9 +15,10 @@
 	<li>Compelete a futsal team in karisma UITM</li>
 	<li>Have a good balance of university, work, sporting, and social life.</li>
 
-		
+<center>		
 <img src="yassin.jpg" height="300px">
-<img src="yassin2.jpg" height="300px">	
+<img src="yassin2.jpg" height="300px">
+	</center>
 </ul>
 
 
