--- a/experience.html
+++ b/experience.html
@@ -1,11 +1,11 @@
 <!EXPERIENCE Html>
 <html>
 	<head>
-		<title>EXPERIENCE</title>
+		<title> MY EXPERIENCE</title>
 		<link rel="stylesheet" href="external.css">
 	</head>
-	<body>
-	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p>
+	<body><center>
+	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p></center>
 
 
 <ul>
