--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
 	
 	<body><center>
 	<p>About of my personal interest i need to keeping up-to-date and to learning other languages-currently studying Mandarin. After that i volunteering for organisations that will allow me to help individuals and communities. lastly i need to maintaining personal health through physical and reacreational activity.</p></center>
-
-<h1>My achievement</h1>
+<center>
+	<h1>My achievement</h1></center>
 <ul>
 	<li>Gain work/get experience in the field of football</li>
 	<li>My highest a cumulative CGPA of 3.05 or higher in this academic year</li>
