--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Personal Portfolio</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="external.css">
 	</head>
 <body>
 
