--- a/my biodata.html
+++ b/my biodata.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>MY BIODATA</title>
+		<link rel="stylesheet" href="external.css">
+	</head>
+<body>
+
+
+
+
+
+
+
+
+
+
+<html>
 <head>
 	<title>My Biodata</title>
 	<link rel="stylesheet" href="external.css">
