--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,14 @@
 <!portfolio html>
 <html>
 	<head><center>
-		<tittle>PORTFOLIO</title>
+		<tittle><h1>PORTFOLIO</h1></title>
 		<link rel="stylesheet" href="external.css">
 	</head></center>
 	
 	<body><center>
 	<p>About of my personal interest i need to keeping up-to-date and to learning other languages-currently studying Mandarin. After that i volunteering for organisations that will allow me to help individuals and communities. lastly i need to maintaining personal health through physical and reacreational activity.</p></center>
 <center>
-	<h1>My achievement</h1></center>
+	<p>My achievement</p></center>
 <ul>
 	<li>Gain work/get experience in the field of football</li>
 	<li>My highest a cumulative CGPA of 3.05 or higher in this academic year</li>
