--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!EXPERIENCE Html>
 <html>
 	<head>
-		<title> MY EXPERIENCE</title>
+		<title><h1> MY EXPERIENCE</h1></title>
 		<link rel="stylesheet" href="external.css">
 	</head>
 	<body><center>
@@ -10,12 +10,13 @@
 
 <ul>
 <center>
+	<p>
 	<li>Gain work/get experience in the field of football</li>
 	<li>Experience working as poultry</li>
 	<li>Have a experience in working at kfc.</li>
 	<li>Have a experience go my father country.</li>
 	<li>Have a experience with new foreign language.</li>
-	<li>Have join as volunteer in Zoo Negara during diploma assignment.</li>
+		<li>Have join as volunteer in Zoo Negara during diploma assignment.</li></p>
 </center>
 </ul>
 
