--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
-		<center><h1>MY EXPERIENCE</center><h1>
+		<center><h1>MY EXPERIENCE</h1></center>
 	<center>
 	<P> I  have a lot to tell about my experience during at school, after finish school and now.Everyone has thier own experience but for me the experience can be more matured. I can learn many knowledge from the experiences. So this is list for my experience. </p></center>
 
