--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,14 @@
 		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
+		<center><h1>CONTACT ME</h1></center>
 	<center>
 	<P>My contact below if you have anything to ask please do not hesitate to contact me.</p>
 		
 
 	<p>
+		<center>
+			<a href="http://www.instagram.com/yassin_izham/"><img src="instagram.png"></a></center>
 		<center>
 	 	<button>
 	 		<a href="http://www.instagram.com/yassin_izham/">Yassin Izham</a></button></center></p>
