--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 	<p>
 		<center>
-			<a href="http://www.instagram.com/yassin_izham/"><img src="instagram.png"></a></center>
+			<a href="http://www.instagram.com/yassin_izham/"><img src="instagram.png" height="50px" widght="50px"></a></center>
 		<center>
 	 	<button>
 	 		<a href="http://www.instagram.com/yassin_izham/">Yassin Izham</a></button></center></p>
