--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,20 @@
 	<P>My contact below if you have anything to ask please do not hesitate to contact me.</p>
 		
 
+		<h1>INSTAGRAM</h1>
 	<p>
 		<center>
-			<a href="http://www.instagram.com/yassin_izham/"><img src="instagram.png" height="50px" widght="50px"></a></center>
-		<center>
-	 	<button>
-	 		<a href="http://www.instagram.com/yassin_izham/">Yassin Izham</a></button></center></p>
+			<a href="http://www.instagram.com/yassin_izham/"><img src="instagram.png" height="50px" widght="50px"></a></center></p>
+		
+		<h1>EMAIL</h1>
 	<p>
 		<center>
-		<button>
-			<a href="mailto:yassinizham98@gmail.com"> email </a> </center></p>
+			<a href="mailto:yassinizham98@gmail.com"><img src="email.png" height="50px" widght="50px"></a></center></p>
+		
+		<h1>TWITTER</h1>
+	<p>
+		<center>
+			<a href="http://www.twitter.com/yassin_izham/">
 
 
 	</body>
