--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 		<h1>TWITTER</h1>
 	<p>
 		<center>
-			<a href="http://www.twitter.com/yassin_izham/"><img src="twitter.png height="50px" widght="50px"</a></center></p>
+			<a href="http://www.twitter.com/yassin_izham/"><img src="twitter.png height="50px" widght="50px"></a></center></p>
 
 
 	</body>
