--- a/my biodata.html
+++ b/my biodata.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Biodata</title>
-	<link rel="stylesheet" href="external.css">
+	<link rel="stylesheet" href="style.css">
 </head>	
 <body>
 <center>	
