--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<center>
 		<tittle><contact></tittle></center>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="external.css">
 	</head>
 	<body>
 		<center><h1>CONTACT ME</h1></center>
